# aoc_bot

./: .gitignore  404.html  CONFIGURATION.md  Cargo.toml  Dockerfile  README.md  bot-server.nomad  commands.html  deny.toml  docker-compose.yml  docker.html  index.html  log.txt  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  docs.yml
config/: auth.toml  default.toml  development.toml  log.toml  production.toml
configuration/: authentication.html  environment-variables.html  index.html  logging.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md  commands.md  docker.md
docs/src/configuration/: README.md  authentication.md  environment-variables.md  logging.md
src/: discord.rs  lib.rs  main.rs  models.rs  settings.rs
src/aoc/: de.rs  mod.rs
