[package]
name = "aoc_bot"
version = "0.1.0"
authors = [
    "ArcticSpaceFox <contact@spacefoxlabs.com>",
    "Dominik Nakamura <dnaka91@gmail.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0.49"
cached = "0.26.2"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
cookie = "0.15.1"
cron = "0.9.0"
dotenv = "0.15.0"
futures-util = "0.3.18"
humantime = "2.1.0"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
simplelog = "0.11.0"
tokio = { version = "1.14.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
toml = "0.5.8"
twilight-cache-inmemory = "0.7.2"
twilight-embed-builder = "0.7.1"
twilight-gateway = "0.7.1"
twilight-http = "0.7.2"
twilight-model = "0.7.2"
