[package]
name = "aoc_bot"
version = "0.1.0"
authors = [
    "ArcticSpaceFox <contact@spacefoxlabs.com>",
    "Dominik Nakamura <dnaka91@gmail.com>",
]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.66"
cached = "0.40.0"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
chrono-humanize = "0.2.2"
cron = "0.12.0"
dotenv = "0.15.0"
futures-util = "0.3.25"
humantime = "2.1.0"
log = "0.4.17"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.148", features = ["derive"] }
simplelog = "0.12.0"
tokio = { version = "1.22.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
toml = "0.5.9"
twilight-cache-inmemory = "0.14.0"
twilight-gateway = { version = "0.14.0", default-features = false, features = ["rustls-webpki-roots", "zlib-stock"] }
twilight-http = { version = "0.14.0", default-features = false, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = "0.14.0"
twilight-util = { version = "0.14.0", features = ["builder"] }
